--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title> Registration form</title>
-        <link rel="stylesheet" type="text/css" href="chuse.css"
+        <link rel="stylesheet" type="text/css" href="style.css"
     </head>
     <body>
         <div class="Registration-form">
